--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "newage-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://petrovski.github.io/STE",
+  "homepage": "https://petrovski.github.io/Star-Tool-Engineering/",
   "dependencies": {
     "font-awesome": "^4.7.0",
     "gh-pages": "^2.0.1",
     "hover.css": "^2.3.2",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.0.17",
-    "react-scroll": "^1.7.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-responsive-carousel": "^3.1.49",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-scroll": "^1.7.12",
     "simple-line-icons": "^2.4.1"
   },
   "scripts": {
@@ -21,5 +22,17 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
