--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newage-react",
+  "name": "star-tool",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://petrovski.github.io/STE/",
